# face-attention

./: .gitignore  README.md  pyproject.toml
src/: data_collect.ipynb
